// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: DocContainer renders 1`] = `
<div
  className="doc-container"
>
  <withRouter(DocHeading) />
  <div
    className="row"
  >
    <DocContent />
  </div>
</div>
`;

exports[`Utilities: DocContainer renders with a table of contents(doctoc) if prop docToc is given 1`] = `
<div
  className="doc-container"
>
  <withRouter(DocHeading) />
  <div
    className="row"
  >
    <DocContent />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
